--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "lucide-react": "^0.561.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.2",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
